--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name":        "analog-clock",
-  "version":     "0.0.0",
-  "description": "My super lovely module",
+  "version":     "1.0.0",
+  "description": "Analog clock widget",
   "author":      "Nikolay Nemshilov",
-  "license":     "MIT"
+  "license":     "MIT",
+  "home_url":    "https://github.com/MadRabbit/analog-clock"
 }
